--- a/package.json
+++ b/package.json
@@ -39,26 +39,15 @@
   "devDependencies": {
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
     "babel-plugin-transform-es2015-destructuring": "^6.9.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.11.5",
     "babel-plugin-transform-es2015-parameters": "^6.11.4",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
     "cpx": "^1.3.2",
     "cross-env": "^2.0.0",
-    "css-loader": "^0.23.1",
     "dotenv": "^2.0.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
     "morgan": "^1.7.0",
     "npm-run-all": "^2.3.0",
-    "rimraf": "^2.5.4",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.1",
-    "webpack-bundle-size-analyzer": "^2.0.2",
-    "webpack-livereload-plugin": "^0.8.1"
+    "rimraf": "^2.5.4"
   },
   "dependencies": {
     "bluebird": "^3.4.1",
