--- a/src/client/package.json
+++ b/src/client/package.json
@@ -2,9 +2,11 @@
   "name": "killrvideo-web-client",
   "version": "0.0.0",
   "description": "The web client for KillrVideo",
-  "main": "webpack.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf ../../dist/client",
+    "build": "webpack --progress",
+    "watch": "npm run build -- --watch"
   },
   "repository": {
     "type": "git",
@@ -49,5 +51,19 @@
     "socket.io-client": "^1.4.8",
     "validate.js": "^0.9.0",
     "xhr": "^2.2.0"
+  },
+  "devDependencies": {
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "rimraf": "^2.5.4",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.1",
+    "webpack-bundle-size-analyzer": "^2.0.2",
+    "webpack-livereload-plugin": "^0.8.1"
   }
 }
