--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "killrvideo-web",
   "version": "1.1.2",
-  "description": "Web UI for the KillrVideo application demo.",
+  "description": "Web Server and UI for the KillrVideo reference application",
   "main": "dist/server/index.js",
   "scripts": {
     "install:client": "cd src/client && npm install",
