--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "falcor-express": "^0.1.2",
     "falcor-json-graph": "^1.1.7",
     "falcor-router": "^0.4.0",
-    "grpc": "^1.0.0-pre1",
+    "grpc": "^1.0.0",
     "js-yaml": "^3.6.1",
     "killrvideo-nodejs-common": "https://github.com/KillrVideo/killrvideo-nodejs-common/releases/download/v2.1.1/killrvideo-nodejs-common-2.1.1.tgz",
     "memoizee": "^0.4.1",
