--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "passport": "^0.3.2",
     "ramda": "^0.21.0",
     "socket.io": "^1.4.8",
-    "uuid": "^2.0.2"
+    "uuid": "^2.0.2",
+    "winston": "^2.2.0"
   }
 }
