--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
   "dependencies": {
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
-    "cassandra-driver": "^3.1.1",
     "cassandra-store": "^3.0.0",
+    "dse-driver": "^1.3.0",
     "config": "^1.21.0",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
