--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,8 @@
 			"name": "Launch",
 			"type": "node",
 			"request": "launch",
-			"program": "${workspaceRoot}\\src\\server\\index.js",
+			"protocol": "inspector",
+			"program": "${workspaceRoot}/src/server/index.js",
 			"stopOnEntry": false,
 			"args": [],
 			"cwd": "${workspaceRoot}",
@@ -21,17 +22,18 @@
 			},
 			"console": "externalTerminal",
 			"sourceMaps": true,
-			"outDir": "${workspaceRoot}\\dist\\server"
+			"outFiles": ["${workspaceRoot}/dist/server/*"]
 		},
 		{
 			"name": "Attach",
 			"type": "node",
 			"request": "attach",
+			"protocol": "inspector",
 			"port": 5858,
 			"address": "localhost",
 			"restart": true,
 			"sourceMaps": true,
-			"outDir": "${workspaceRoot}\\dist\\server",
+			"outFiles": ["${workspaceRoot}/dist/server/*"],
 			"localRoot": "${workspaceRoot}",
 			"remoteRoot": null
 		}
