--- a/src/client/package.json
+++ b/src/client/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^0.14.9",
     "react-dropzone": "^3.13.4",
     "react-gemini-scrollbar": "^2.3.2",
+    "react-joyride": "^1.10.1",
     "react-redux": "^4.4.8",
     "react-router": "^2.8.1",
     "react-router-redux": "^2.1.0",
