--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,20 +1,60 @@
 version: '3'
-
-# Other services are specified in .\lib\killrvideo-docker-common\docker-compose.yaml
 services:
-  # Start the service implementation of your choice (Java, C#, node.js) separately
-
-  # The sample data generator
-  generator:
-    image: killrvideo/killrvideo-generator:1.2.3
+  web:
+    #image: hadesarchitect/killrvideo-web:no-etcd
+    build: .
+    volumes:
+      - .:/opt/killrvideo-web
+    ports:
+      - "3000:3000"
     depends_on:
-    - dse
-    - etcd
+      - dse
+      - backend
     environment:
-      KILLRVIDEO_ETCD: "etcd:2379"
-      KILLRVIDEO_DSE_USERNAME: $KILLRVIDEO_DSE_USERNAME
-      KILLRVIDEO_DSE_PASSWORD: $KILLRVIDEO_DSE_PASSWORD
-      NODE_ENV: $NODE_ENV
-      KILLRVIDEO_CASSANDRA_REPLICATION: $KILLRVIDEO_CASSANDRA_REPLICATION
-      KILLRVIDEO_LOGGING_LEVEL: $KILLRVIDEO_LOGGING_LEVEL
+      KILLRVIDEO_LOGGING_LEVEL: debug
 
+  backend:
+    image: hadesarchitect/killrvideo-nodejs:no-etcd
+    depends_on:
+      - dse
+    environment:
+      KILLRVIDEO_LOGGING_LEVEL: debug
+
+  dse:
+    image: datastax/dse-server:6.0.0
+    command: [ -s -g ]
+    ports:
+      - "9042:9042"
+      - "8983:8983"
+      - "8182:8182"
+    environment:
+      DS_LICENSE: accept
+    # Allow DSE to lock memory with mlock
+    cap_add:
+      - IPC_LOCK
+    ulimits:
+      memlock: -1
+
+  dse-config:
+    image: killrvideo/killrvideo-dse-config:2.2.1
+    environment:
+      KILLRVIDEO_SERVICE_DISCOVERY_DISABLED: 'true'
+    depends_on:
+      - dse
+
+  generator:
+    image: killrvideo/killrvideo-generator:3.0.0-rc4
+    depends_on:
+      - dse
+      - backend
+    environment:
+      KILLRVIDEO_LOGGING_LEVEL: debug
+
+#  studio:
+#    image: killrvideo/killrvideo-studio:2.0.0
+#    ports:
+#      - "9091:9091"
+#    depends_on:
+#      - dse
+#    environment:
+#      DS_LICENSE: accept
