Added support for DSE Contact points as an env var

--- a/config/custom-environment-variables.yaml
+++ b/config/custom-environment-variables.yaml
@@ -12,3 +12,6 @@ cassandra:
   replication: KILLRVIDEO_CASSANDRA_REPLICATION
   dseUsername: KILLRVIDEO_DSE_USERNAME
   dsePassword: KILLRVIDEO_DSE_PASSWORD
+
+services:
+  cassandra: KILLRVIDEO_DSE_CONTACTPOINTS
